@@ -1,3 +1,5 @@
+* Check read access on field in search domain (issue7766)
+
 Version 5.0.0 - 2018-10-01
 * Bug fixes (see mercurial logs for details)
 * Allow non translatable reports
